--- a/Task1LoginRegister/Areas/Admin/Views/ProductVariant/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/ProductVariant/Create.cshtml
@@ -27,10 +27,14 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     }
-    <h1>Create Variants for @Model.ProductName</h1>
-
-    <hr />
-
+    <div class="card shadow mb-4">
+        <div class="card-header py-3 d-flex justify-content-between align-items-center">
+            <h3 class="m-0 font-weight-bold text-primary">Create Variant for Product: @Model.ProductName</h3>
+            <a asp-action="Index" asp-controller="ProductVariant" asp-area="Admin" class="btn btn-secondary">
+                <i class="fas fa-arrow-left"></i> Back to Variants
+            </a>
+        </div>
+        <div class="card-body">
     <form asp-action="Create" method="post" id="varinatForm" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="ProductId" />
@@ -51,10 +55,11 @@
         </div>
 
         <div class="form-group mt-3">
-            <input type="submit" id="submitButton" value="Save" class="btn btn-primary" />
-            <a asp-controller="ProductVariant" asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
+            <input type="submit" id="submitButton" value="Save" class="btn btn-outline-info" />
         </div>
     </form>
+    </div>
+    </div>
 </div>
 @section Scripts {
     @{
