--- a/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Index.cshtml
@@ -131,7 +131,13 @@
 
 
                    
-                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Name)
+                        <div>
+                            <a asp-action="Create" asp-controller="ProductVariant" asp-route-productId="@item.ProductId" class="btn btn-info btn-sm mt-1" >
+                                <i class="fas fa-plus-circle"></i> Add Variant
+                            </a>
+                        </div>
+                    </td>
                     <td>@Html.DisplayFor(modelItem => item.SKU)</td>
                     <td class="border p-2">@item.CostPrice.ToString("N2")</td>
                     <td class="border p-2">@item.Price.ToString("N2")</td>
@@ -156,8 +162,13 @@
                             </a>
                         </div>
                         <div style="width: 100%;">
-                            <a asp-action="Delete" asp-route-id="@item.ProductId" class="btn btn-danger btn-sm w-100" onclick="return confirm('Are you sure you want to delete this product?')" title="Delete Product">
+                            <a asp-action="Delete" asp-route-id="@item.ProductId" class="btn btn-danger btn-sm w-100 mb-2" onclick="return confirm('Are you sure you want to delete this product?')" title="Delete Product">
                                 <i class="fas fa-trash-alt"></i> Delete
+                            </a>
+                        </div>
+                        <div style="width:100%">
+                            <a asp-action="Create" asp-controller="ProductVariant" asp-route-productId="@item.ProductId" class="btn btn-primary btn-sm w-100">
+                                <i class="fas fa-plus-circle"></i> Add Variant
                             </a>
                         </div>
                     </td>
